# 3D-OpenGL-Engine-CG

./: .gitattributes  .gitignore  README.md  config.xml  config1.xml  solar_system_xml_generator.py
engine/: CMakeLists.txt
engine/include/: catmull_rom.hpp  draw.hpp  menu.hpp  structs.h  structs.hpp  utils.hpp  xml_parser.hpp
engine/src/: catmull_rom.cpp  draw.cpp  main.cpp  menu.cpp  structs.cpp  utils.cpp  xml_parser.cpp
generator/: CMakeLists.txt
generator/include/: Bezier.hpp  FileWriter.hpp  PointsGenerator.hpp  box.hpp  cone.hpp  cylinder.hpp  plane.hpp  sphere.hpp  torus.hpp
generator/src/: Bezier.cpp  FileWriter.cpp  PointsGenerator.cpp  box.cpp  cone.cpp  cylinder.cpp  main.cpp  plane.cpp  sphere.cpp  torus.cpp
group_info/: comet.txt  earth.txt  earth_moon.txt  jupiter.txt  mars.txt  mercury.txt  neptune.txt  saturn.txt  sun.txt  uranus.txt  venus.txt
objects/: box.3d  comet.3d  cone.3d  cylinder.3d  plane.3d  sphere.3d  torus.3d
patches/: comet.patch
scenes/: cone.xml  config.xml  config2.xml  cylinder.xml  example.xml  lights.xml  normals.xml  skybox.xml  solar_system.xml  tex.xml
